# anamnesis

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: config.py  dependencies.py  main.py
app/ai/: __init__.py  analysis_service.py  briefing_generator.py  client.py  embeddings.py  insight_generator.py  prompts.py  query_engine.py
app/api/: auth.py  connections.py  insights.py  messages.py  notifications.py  people.py  queries.py  router.py  users.py  webhooks.py
app/core/: database.py  decorators.py  encryption.py  events.py  exceptions.py  push.py  rate_limiter.py  redis.py  security.py  unit_of_work.py
app/domain/: message.py  person.py
app/ingestion/: __init__.py  base.py  gmail.py  google_calendar.py  notion.py  slack.py
app/models/: __init__.py  base.py  commitment.py  connection.py  ingestion_job.py  insight.py  message.py  notification.py  person.py  privacy_settings.py  query.py  relationship_event.py  thread.py  usage_event.py  user.py
app/repositories/: __init__.py  base.py  commitment_repository.py  connection_repository.py  ingestion_job_repository.py  insight_repository.py  message_repository.py  notification_repository.py  people_repository.py  query_repository.py  relationship_event_repository.py  thread_repository.py  usage_repository.py  user_repository.py
docker/: Dockerfile.api  Dockerfile.beat  Dockerfile.worker  nginx.conf
docs/: PAIR_C_CHECKPOINT.md
(+21 files in other folders)
